--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/stocknet
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-#drop n create table again, good for testing, comment this in production
+#drop and create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
